--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# Auto-generated !!! Do not edit it manually
+# use ci-master https://github.com/metanorma/metanorma-build-scripts
 language: ruby
 cache: bundler
 os:
@@ -6,11 +8,12 @@ os:
 rvm:
 - 2.5
 - 2.4
+- 2.3
 - ruby-head
-before_install:
+before_install: 
 - gem install bundler -v 2.0.1
 - bundle update
 matrix:
   allow_failures:
+    - rvm: 2.3
     - rvm: ruby-head
-
