--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# Auto-generated !!! Do not edit it manually
+# use ci-master https://github.com/metanorma/metanorma-build-scripts
 language: ruby
 cache: bundler
 os:
@@ -7,10 +9,9 @@ rvm:
 - 2.5
 - 2.4
 - ruby-head
-before_install:
+before_install: 
 - gem install bundler -v 2.0.1
 - bundle update
 matrix:
   allow_failures:
     - rvm: ruby-head
-
