--- a/spec/examples/nist_bib_item.yml
+++ b/spec/examples/nist_bib_item.yml
@@ -28,6 +28,8 @@ date:
   - type: issued
     value: "2018-12-01"
 
+revdate: "2018-12-01"
+
 abstract:
   content: The NISTIR 8011 volumes each focus on an individual information security capability, adding tangible detail to the more general overview given in NISTIR 8011 Volume 1, and providing a template for transition to a detailed, NIST guidance-based automated assessment. This document, Volume 3 of NISTIR 8011, addresses the Software Asset Management (SWAM) information security capability. The focus of the SWAM capability is to manage risk created by unmanaged or unauthorized software on a network. Unmanaged or unauthorized software is a target that attackers can use as a platform from which to attack components on the network.
   language: en
