--- a/spec/examples/nist_bib_item.yml
+++ b/spec/examples/nist_bib_item.yml
@@ -19,8 +19,10 @@ language: en
 script: Latn
 
 docstatus:
-  stage: final
-  substage: active
+  stage:
+    value: final
+  substage:
+    value: active
 
 date:
   - type: published
