fix issue relaton/relaton-bib#48

--- a/spec/vcr_cassettes/8011_1.yml
+++ b/spec/vcr_cassettes/8011_1.yml
@@ -39,29 +39,29 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       X-Github-Request-Id:
-      - 9040:37A4:10E7886:11E51F9:612D0F77
+      - A64E:8F8A:217C45:28CABA:615DD731
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 30 Aug 2021 17:03:51 GMT
+      - Wed, 06 Oct 2021 17:04:49 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-muc13938-MUC
+      - cache-muc13953-MUC
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1630343031.339132,VS0,VE258
+      - S1633539889.457645,VS0,VE400
       Vary:
-      - Authorization,Accept-Encoding
+      - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - b0245b5fa28b6e59527c792afb79667fa6dfbe61
+      - bc7b68a7ac1be499ee65fb6abef6f73fccc7fd5c
       Expires:
-      - Mon, 30 Aug 2021 17:08:51 GMT
+      - Wed, 06 Oct 2021 17:09:49 GMT
       Source-Age:
       - '0'
     body:
@@ -128,5 +128,5 @@ http_interactions:
         script: Latn
         place: Gaithersburg, MD
         doctype: standard
-  recorded_at: Mon, 30 Aug 2021 17:03:51 GMT
+  recorded_at: Wed, 06 Oct 2021 17:04:49 GMT
 recorded_with: VCR 6.0.0
