--- a/spec/vcr_cassettes/sp_2222.yml
+++ b/spec/vcr_cassettes/sp_2222.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - E9BE:0F7D:10E56EC:11DB2AB:612D0F7B
+      - 4FC0:647A:CBC78D:D52E43:615DD736
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 30 Aug 2021 17:03:55 GMT
+      - Wed, 06 Oct 2021 17:04:55 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-muc13923-MUC
+      - cache-muc13928-MUC
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1630343036.798204,VS0,VE160
+      - S1633539895.864282,VS0,VE177
       Vary:
-      - Authorization,Accept-Encoding
+      - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - c3c189241a55bba5cde26cf2f142629d834b8406
+      - 03cff8193c3a4b5b96af949b4c652c84a74d31c5
       Expires:
-      - Mon, 30 Aug 2021 17:08:55 GMT
+      - Wed, 06 Oct 2021 17:09:55 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Mon, 30 Aug 2021 17:03:55 GMT
+  recorded_at: Wed, 06 Oct 2021 17:04:54 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_2222.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - E9BE:0F7D:10E56EC:11DB2AB:612D0F7B
+      - 4FC0:647A:CBC78D:D52E43:615DD736
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 30 Aug 2021 17:03:56 GMT
+      - Wed, 06 Oct 2021 17:04:55 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-muc13970-MUC
+      - cache-muc13941-MUC
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1630343036.180386,VS0,VE0
+      - S1633539895.269006,VS0,VE0
       Vary:
-      - Authorization,Accept-Encoding
+      - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 9333fd539aff9fac9dde5648ba7473199ad48d3a
+      - 4440f4d4a035ba7f730cd94d436b3b6c0fde591e
       Expires:
-      - Mon, 30 Aug 2021 17:08:56 GMT
+      - Wed, 06 Oct 2021 17:09:55 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Mon, 30 Aug 2021 17:03:56 GMT
+  recorded_at: Wed, 06 Oct 2021 17:04:55 GMT
 recorded_with: VCR 6.0.0
