--- a/spec/vcr_cassettes/sp_800_90c.yml
+++ b/spec/vcr_cassettes/sp_800_90c.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 26AE:0F6B:D580:10474:612D0F79
+      - C018:5BB4:60CBA6:68DC66:615DD734
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 30 Aug 2021 17:03:53 GMT
+      - Wed, 06 Oct 2021 17:04:52 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-muc13931-MUC
+      - cache-muc13955-MUC
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1630343034.687426,VS0,VE157
+      - S1633539893.702845,VS0,VE179
       Vary:
-      - Authorization,Accept-Encoding
+      - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - ae227f3642db2a6163531822b5294715f0b687d1
+      - bbba679e58f5539efb4622fa2fcd0e8c21205518
       Expires:
-      - Mon, 30 Aug 2021 17:08:53 GMT
+      - Wed, 06 Oct 2021 17:09:52 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Mon, 30 Aug 2021 17:03:53 GMT
+  recorded_at: Wed, 06 Oct 2021 17:04:52 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_800-90C.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 26AE:0F6B:D580:10474:612D0F79
+      - C018:5BB4:60CBA6:68DC66:615DD734
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 30 Aug 2021 17:03:54 GMT
+      - Wed, 06 Oct 2021 17:04:53 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-muc13962-MUC
+      - cache-muc13958-MUC
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1630343034.107895,VS0,VE0
+      - S1633539893.102656,VS0,VE0
       Vary:
-      - Authorization,Accept-Encoding
+      - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - ac317d78c9721bb27a0ac93ac43fe7489a611eb9
+      - d87e28e171da418381aa735ace50baec8c9c88aa
       Expires:
-      - Mon, 30 Aug 2021 17:08:54 GMT
+      - Wed, 06 Oct 2021 17:09:53 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Mon, 30 Aug 2021 17:03:54 GMT
+  recorded_at: Wed, 06 Oct 2021 17:04:52 GMT
 recorded_with: VCR 6.0.0
