--- a/spec/examples/nist_bib_item.yml
+++ b/spec/examples/nist_bib_item.yml
@@ -1,22 +1,26 @@
 id: NISTIR 8011 Vol. 3
 
 title:
-  content: "Automation Support for Security Control Assessments: Software Asset Management"
-  language: en
-  script: Latn
+- content: "Automation Support for Security Control Assessments: Software Asset Management"
+  language:
+  - en
+  script:
+  - Latn
   format: text/plain
 
 type: standard
 
 docid:
-  id: 8011 Vol. 3
+- id: 8011 Vol. 3
   type: NISTIR
 
 docnumber: "8011"
 
-language: en
+language:
+- en
 
-script: Latn
+script:
+- Latn
 
 docstatus:
   stage:
@@ -35,21 +39,26 @@ date:
 revdate: "2018-12-01"
 
 abstract:
-  content: The NISTIR 8011 volumes each focus on an individual information security capability, adding tangible detail to the more general overview given in NISTIR 8011 Volume 1, and providing a template for transition to a detailed, NIST guidance-based automated assessment. This document, Volume 3 of NISTIR 8011, addresses the Software Asset Management (SWAM) information security capability. The focus of the SWAM capability is to manage risk created by unmanaged or unauthorized software on a network. Unmanaged or unauthorized software is a target that attackers can use as a platform from which to attack components on the network.
-  language: en
-  script: Latn
+- content: The NISTIR 8011 volumes each focus on an individual information security capability, adding tangible detail to the more general overview given in NISTIR 8011 Volume 1, and providing a template for transition to a detailed, NIST guidance-based automated assessment. This document, Volume 3 of NISTIR 8011, addresses the Software Asset Management (SWAM) information security capability. The focus of the SWAM capability is to manage risk created by unmanaged or unauthorized software on a network. Unmanaged or unauthorized software is a target that attackers can use as a platform from which to attack components on the network.
+  language:
+  - en
+  script:
+  - Latn
   format: text/plain
 
 contributor:
-  organization:
-    name: National Institute of Standards and Technology
+- organization:
+    name:
+    - National Institute of Standards and Technology
     url: www.nist.gov
     abbreviation: NIST
-  role: publisher
+  role:
+  - publisher
 
 copyright:
-  owner:
-    name: National Institute of Standards and Technology
+- owner:
+  - name:
+    - National Institute of Standards and Technology
     abbreviation: NIST
     url: www.nist.gov
   from: "2018"
@@ -68,7 +77,7 @@ relation:
         content: NISTIR 8011 Vol. 1
         format: text/plain
       link:
-        type: src
+      - type: src
         content: https://csrc.nist.gov/publications/detail/nistir/8011/vol-1/final
   - type: updates
     bibitem:
@@ -77,14 +86,16 @@ relation:
         content: SP 800-53A Rev. 4
         format: text/plain
       link:
-        type: src
+      - type: src
         content: https://csrc.nist.gov/publications/detail/sp/800-53a/rev-4/final
 
 series:
-  formattedref:
+- formattedref:
     content: NISTIR 8011 Vol. 3 (IPD)
-    language: en
-    script: Latn
+    language:
+    - en
+    script:
+    - Latn
     format: text/plain
 
 keyword:
