--- a/spec/vcr_cassettes/sp_2222.yml
+++ b/spec/vcr_cassettes/sp_2222.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 4FC0:647A:CBC78D:D52E43:615DD736
+      - AD1C:D0BE:C85B91:D0BF2C:61DEC1D4
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 06 Oct 2021 17:04:55 GMT
+      - Wed, 12 Jan 2022 11:56:04 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-muc13928-MUC
+      - cache-sof1510025-SOF
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1633539895.864282,VS0,VE177
+      - S1641988565.665032,VS0,VE209
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 03cff8193c3a4b5b96af949b4c652c84a74d31c5
+      - 0bcc0901b976b9dbd5ee562b74a629529eeab3f9
       Expires:
-      - Wed, 06 Oct 2021 17:09:55 GMT
+      - Wed, 12 Jan 2022 12:01:04 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Wed, 06 Oct 2021 17:04:54 GMT
+  recorded_at: Wed, 12 Jan 2022 11:56:04 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_2222.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 4FC0:647A:CBC78D:D52E43:615DD736
+      - AD1C:D0BE:C85B91:D0BF2C:61DEC1D4
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 06 Oct 2021 17:04:55 GMT
+      - Wed, 12 Jan 2022 11:56:05 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-muc13941-MUC
+      - cache-sof1510045-SOF
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1633539895.269006,VS0,VE0
+      - S1641988565.260026,VS0,VE0
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 4440f4d4a035ba7f730cd94d436b3b6c0fde591e
+      - c9e8c3062570b06eca5d3046712432201e2e5f40
       Expires:
-      - Wed, 06 Oct 2021 17:09:55 GMT
+      - Wed, 12 Jan 2022 12:01:05 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Wed, 06 Oct 2021 17:04:55 GMT
+  recorded_at: Wed, 12 Jan 2022 11:56:05 GMT
 recorded_with: VCR 6.0.0
