--- a/spec/vcr_cassettes/sp_800_90c.yml
+++ b/spec/vcr_cassettes/sp_800_90c.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 6B4E:3515:73FCE:78CAA:62013E2D
+      - 26F8:6FBF:2B1229:333CDF:624DB2BA
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 07 Feb 2022 15:43:41 GMT
+      - Wed, 06 Apr 2022 15:33:14 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-sof1510025-SOF
+      - cache-vie6354-VIE
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1644248621.220876,VS0,VE186
+      - S1649259194.448313,VS0,VE185
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 5d24a44b861d08ae6b1e67433068eff2f6e293fe
+      - ac00edb391d53e059dd79b7b8aebec08e645816c
       Expires:
-      - Mon, 07 Feb 2022 15:48:41 GMT
+      - Wed, 06 Apr 2022 15:38:14 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Mon, 07 Feb 2022 15:43:41 GMT
+  recorded_at: Wed, 06 Apr 2022 15:33:14 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_800-90C.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 6B4E:3515:73FCE:78CAA:62013E2D
+      - 26F8:6FBF:2B1229:333CDF:624DB2BA
       Accept-Ranges:
       - bytes
       Date:
-      - Mon, 07 Feb 2022 15:43:41 GMT
+      - Wed, 06 Apr 2022 15:33:14 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-sof1510063-SOF
+      - cache-vie6355-VIE
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1644248622.638138,VS0,VE0
+      - S1649259195.911444,VS0,VE0
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 0c0a791213649d66512e24c588d2ba84402dad54
+      - 1a12c59e063133c96d77261d2c2c7db36b9b6f91
       Expires:
-      - Mon, 07 Feb 2022 15:48:41 GMT
+      - Wed, 06 Apr 2022 15:38:14 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Mon, 07 Feb 2022 15:43:41 GMT
-recorded_with: VCR 6.0.0
+  recorded_at: Wed, 06 Apr 2022 15:33:14 GMT
+recorded_with: VCR 6.1.0
