fix issue relaton/relaton#99

--- a/spec/vcr_cassettes/sp_2222.yml
+++ b/spec/vcr_cassettes/sp_2222.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - D964:721E:C26DD9:CA3DEE:624DB2BD
+      - E6A4:656E:136E1D1:1448112:626E6E6A
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 06 Apr 2022 15:33:17 GMT
+      - Sun, 01 May 2022 11:26:34 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6323-VIE
+      - cache-sof1510066-SOF
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1649259197.111514,VS0,VE178
+      - S1651404395.661351,VS0,VE182
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 953fa6cfe89e5a57c35d51f164a666f275fde50b
+      - 10aeefa443e772bb457fac91e15f373faea895ca
       Expires:
-      - Wed, 06 Apr 2022 15:38:17 GMT
+      - Sun, 01 May 2022 11:31:34 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Wed, 06 Apr 2022 15:33:17 GMT
+  recorded_at: Sun, 01 May 2022 11:26:34 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_2222.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - D964:721E:C26DD9:CA3DEE:624DB2BD
+      - E6A4:656E:136E1D1:1448112:626E6E6A
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 06 Apr 2022 15:33:17 GMT
+      - Sun, 01 May 2022 11:26:35 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6368-VIE
+      - cache-sof1510024-SOF
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1649259198.774853,VS0,VE0
+      - S1651404395.050243,VS0,VE0
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 9c42af0b055c8f2c8352b084229deef31618b73a
+      - 480b33db3eab2ccade6c898dc90ad76f3bac8591
       Expires:
-      - Wed, 06 Apr 2022 15:38:17 GMT
+      - Sun, 01 May 2022 11:31:35 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Wed, 06 Apr 2022 15:33:17 GMT
+  recorded_at: Sun, 01 May 2022 11:26:34 GMT
 recorded_with: VCR 6.1.0
