--- a/spec/vcr_cassettes/sp_800_90c.yml
+++ b/spec/vcr_cassettes/sp_800_90c.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 26F8:6FBF:2B1229:333CDF:624DB2BA
+      - 1B48:CA47:129E49F:1378C50:626E6E68
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 06 Apr 2022 15:33:14 GMT
+      - Sun, 01 May 2022 11:26:32 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6354-VIE
+      - cache-sof1510077-SOF
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1649259194.448313,VS0,VE185
+      - S1651404393.501169,VS0,VE198
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - ac00edb391d53e059dd79b7b8aebec08e645816c
+      - 715f64db94a700b4a1fdb469d120654300d80f97
       Expires:
-      - Wed, 06 Apr 2022 15:38:14 GMT
+      - Sun, 01 May 2022 11:31:32 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Wed, 06 Apr 2022 15:33:14 GMT
+  recorded_at: Sun, 01 May 2022 11:26:32 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_800-90C.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 26F8:6FBF:2B1229:333CDF:624DB2BA
+      - 1B48:CA47:129E49F:1378C50:626E6E68
       Accept-Ranges:
       - bytes
       Date:
-      - Wed, 06 Apr 2022 15:33:14 GMT
+      - Sun, 01 May 2022 11:26:32 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6355-VIE
+      - cache-sof1510023-SOF
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1649259195.911444,VS0,VE0
+      - S1651404393.902136,VS0,VE0
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 1a12c59e063133c96d77261d2c2c7db36b9b6f91
+      - 8dc7c3fea1be0f5f30d5e41ba7faeeb95d5fedda
       Expires:
-      - Wed, 06 Apr 2022 15:38:14 GMT
+      - Sun, 01 May 2022 11:31:32 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Wed, 06 Apr 2022 15:33:14 GMT
+  recorded_at: Sun, 01 May 2022 11:26:32 GMT
 recorded_with: VCR 6.1.0
