--- a/spec/vcr_cassettes/sp_800_90c.yml
+++ b/spec/vcr_cassettes/sp_800_90c.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 1B48:CA47:129E49F:1378C50:626E6E68
+      - DEAA:5A9E:11C50C:12D321:627A9C53
       Accept-Ranges:
       - bytes
       Date:
-      - Sun, 01 May 2022 11:26:32 GMT
+      - Tue, 10 May 2022 17:09:39 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-sof1510077-SOF
+      - cache-vie6347-VIE
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1651404393.501169,VS0,VE198
+      - S1652202579.438184,VS0,VE164
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 715f64db94a700b4a1fdb469d120654300d80f97
+      - 62dd707a9675ca4dbda177329c9c7a11bf50494c
       Expires:
-      - Sun, 01 May 2022 11:31:32 GMT
+      - Tue, 10 May 2022 17:14:39 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Sun, 01 May 2022 11:26:32 GMT
+  recorded_at: Tue, 10 May 2022 17:09:39 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_800-90C.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 1B48:CA47:129E49F:1378C50:626E6E68
+      - DEAA:5A9E:11C50C:12D321:627A9C53
       Accept-Ranges:
       - bytes
       Date:
-      - Sun, 01 May 2022 11:26:32 GMT
+      - Tue, 10 May 2022 17:09:39 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-sof1510023-SOF
+      - cache-vie6353-VIE
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1651404393.902136,VS0,VE0
+      - S1652202580.841658,VS0,VE0
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 8dc7c3fea1be0f5f30d5e41ba7faeeb95d5fedda
+      - 8b814c71f17777a249260b83cddabfacd2f548c1
       Expires:
-      - Sun, 01 May 2022 11:31:32 GMT
+      - Tue, 10 May 2022 17:14:39 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Sun, 01 May 2022 11:26:32 GMT
+  recorded_at: Tue, 10 May 2022 17:09:39 GMT
 recorded_with: VCR 6.1.0
