--- a/spec/vcr_cassettes/nistir_5667v4.yml
+++ b/spec/vcr_cassettes/nistir_5667v4.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - 4700:AFB1:25ED6E:272328:627A9C54
+      - DDE0:5594:3EB704:43420D:62B5C72D
       Accept-Ranges:
       - bytes
       Date:
-      - Tue, 10 May 2022 17:09:40 GMT
+      - Fri, 24 Jun 2022 14:16:13 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6365-VIE
+      - cache-vie6363-VIE
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1652202580.258325,VS0,VE174
+      - S1656080173.188217,VS0,VE192
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - dafd3e2a5a08b5a9cde2563257e95556c7467f63
+      - d4557aeba2c18b91a5f03bf0b73e7542a01300c5
       Expires:
-      - Tue, 10 May 2022 17:14:40 GMT
+      - Fri, 24 Jun 2022 14:21:13 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Tue, 10 May 2022 17:09:40 GMT
+  recorded_at: Fri, 24 Jun 2022 14:16:13 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/NISTIR_5667V4.yaml
@@ -103,29 +103,29 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       X-Github-Request-Id:
-      - 5288:F713:235608:2487DA:627A9C54
+      - F208:AE53:42937D:4725CF:62B5C72D
       Accept-Ranges:
       - bytes
       Date:
-      - Tue, 10 May 2022 17:09:40 GMT
+      - Fri, 24 Jun 2022 14:16:13 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6333-VIE
+      - cache-vie6348-VIE
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1652202581.619218,VS0,VE184
+      - S1656080174.606225,VS0,VE192
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 6f27cdc0dc7135601f2d4669bba2d96fd5b914f3
+      - 5e09c2166c33820a78c3144c742bc0c1e39c1e2e
       Expires:
-      - Tue, 10 May 2022 17:14:40 GMT
+      - Fri, 24 Jun 2022 14:21:13 GMT
       Source-Age:
       - '0'
     body:
@@ -190,5 +190,5 @@ http_interactions:
         place:
         - Gaithersburg, MD
         doctype: standard
-  recorded_at: Tue, 10 May 2022 17:09:40 GMT
+  recorded_at: Fri, 24 Jun 2022 14:16:13 GMT
 recorded_with: VCR 6.1.0
