--- a/spec/vcr_cassettes/sp_2222.yml
+++ b/spec/vcr_cassettes/sp_2222.yml
@@ -35,35 +35,35 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - F208:AE53:4293BE:472613:62B5C72E
+      - 8CB0:AAF7:5FED2:80FBD:62BF063D
       Accept-Ranges:
       - bytes
       Date:
-      - Fri, 24 Jun 2022 14:16:14 GMT
+      - Fri, 01 Jul 2022 14:35:42 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6363-VIE
+      - cache-vie6380-VIE
       X-Cache:
       - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1656080174.436192,VS0,VE170
+      - S1656686142.868281,VS0,VE165
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 2b133ef68970eb91a6d9bbfc06ad2167564fe653
+      - 2e011674646593bdf30979df7d8f5fdec5c5a64e
       Expires:
-      - Fri, 24 Jun 2022 14:21:14 GMT
+      - Fri, 01 Jul 2022 14:40:42 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Fri, 24 Jun 2022 14:16:14 GMT
+  recorded_at: Fri, 01 Jul 2022 14:35:41 GMT
 - request:
     method: get
     uri: https://raw.githubusercontent.com/relaton/relaton-data-nist/main/data/SP_2222.yaml
@@ -99,33 +99,33 @@ http_interactions:
       Content-Type:
       - text/plain; charset=utf-8
       X-Github-Request-Id:
-      - F208:AE53:4293BE:472613:62B5C72E
+      - 8CB0:AAF7:5FED2:80FBD:62BF063D
       Accept-Ranges:
       - bytes
       Date:
-      - Fri, 24 Jun 2022 14:16:14 GMT
+      - Fri, 01 Jul 2022 14:35:42 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-vie6321-VIE
+      - cache-vie6360-VIE
       X-Cache:
       - HIT
       X-Cache-Hits:
       - '1'
       X-Timer:
-      - S1656080175.809248,VS0,VE1
+      - S1656686142.236341,VS0,VE0
       Vary:
       - Authorization,Accept-Encoding,Origin
       Access-Control-Allow-Origin:
       - "*"
       X-Fastly-Request-Id:
-      - 8014c60d60b5b6d746db861cd9e8d1b21215ce6a
+      - a305adcccb53efd3b68a13931e6dd1a0676fc5ed
       Expires:
-      - Fri, 24 Jun 2022 14:21:14 GMT
+      - Fri, 01 Jul 2022 14:40:42 GMT
       Source-Age:
       - '0'
     body:
       encoding: UTF-8
       string: '404: Not Found'
-  recorded_at: Fri, 24 Jun 2022 14:16:14 GMT
+  recorded_at: Fri, 01 Jul 2022 14:35:42 GMT
 recorded_with: VCR 6.1.0
